--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@
 *.tdo
 
 # Build directory (except structure)
-build/*.pdf
 build/*.aux
 build/*.log
 build/*.out
@@ -42,6 +41,7 @@ build/*.bcf
 build/*.blg
 build/*.run.xml
 build/*.synctex.gz
+!build/main.pdf
 
 # OS generated files
 .DS_Store
@@ -72,7 +72,6 @@ __pycache__/
 
 
 # Build directories
-build/
 dist/
 
 # Python
